[package]
name = "chru"
version = "0.1.1"
authors = ["Leoid <hmali201488@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
select = "*"
scraper = "*"
itertools = "*"
http = "*"
url = "*"
openssl = { version = "0.10", features = ["vendored"] }
regex = "*"
lazy_static = "*"
futures = "*"
structopt ="*"
